--- a/通识课/电工电子技术/笔记/1. 电路基础.md
+++ b/通识课/电工电子技术/笔记/1. 电路基础.md
@@ -4,7 +4,7 @@ Level 3
 
 ### 1.1 参考方向
 
-![[_Set/Class/通识课/电工电子技术/笔记/images/Pasted image 20240606170102.png]]
+![[images/Pasted image 20240606170102.png]]
 $U>0$或$I>0$实际与参考一致;
 $U<0$或$I<0$实际与参考不一致.
 
@@ -45,7 +45,7 @@ $I_1+I_2=I_3$ 或 $I_1+I_2+I_3=0$
 2. 列出 KCL 方程
 3. 求解方程
 
-## 4. 基尔霍夫电压定律  
+## 4. 基尔霍夫电压定律 (KVL)
 **必考**
 
 同一回路: $\sum U_\text{升}=\sum U_\text{降}{\text{ 或 }\sum U=0}$
@@ -55,6 +55,6 @@ $U_1+U_4=U_2+U_3$  或 $U_1-U_2-U_3+U_4=0$
 
 解题步骤:
 1. 选出回路, 确定回路绕行方向
-2. 列出KV 方程
+2. 列出KVL 方程
 3. 求解方程
 
