--- a/通识课/电工电子技术/笔记/19. 时序逻辑电路.md
+++ b/通识课/电工电子技术/笔记/19. 时序逻辑电路.md
@@ -42,13 +42,17 @@ Level 5
 4. 列出逻辑状态表; 
 5. 画出波形图. 
 
+## 3. 常用集成计数器的分析与应用
+Level 5
+
+![[images/Pasted image 20240611184208.png]]
+
+![[images/Pasted image 20240611184145.png]]
 
 
 
 
-
-
-
+ 
 
 
 
