--- a/专业课/人工智能导论/实验&作业/实验三 谓词逻辑.md
+++ b/专业课/人工智能导论/实验&作业/实验三 谓词逻辑.md
@@ -1,285 +1,456 @@
 
 # MarkDown
 
+### 项目简介
+本项目旨在实现一个一阶逻辑证明器，利用归结法证明目标子句是否可以从知识库中导出。输入格式为描述知识库和目标子句的文本文件，输出为证明过程中使用的每一步和最终的证明结果。
 
-## 1. 项目简介
-本项目的目标是实现一个基于归结原理的自动定理证明器。我们会接受用户输入的知识库（KB）和目标（G），通过一系列的归结步骤来证明目标是否可以从知识库中推导出来。
+### 模型代码分布及作用介绍
 
-## 2. 模型代码分布及作用介绍
-1. **main.py**: 主程序文件，处理输入输出，并调用证明器进行证明。
-2. **resolution.py**: 包含实现归结反演算法的主要逻辑。
-3. **utils.py**: 包含辅助函数，例如解析输入，标准化子句等。
-4. **test_cases.py**: 包含测试用例，用于验证我们的证明器的正确性。
+#### 类和函数说明
+- **`Expr`类**：表示逻辑表达式，包括谓词符号、否定和参数。
+- **`Clause`类**：表示子句，包括表达式列表和拼接方法。
+- **`clauseparser`函数**：解析输入字符串为子句列表。
+- **`extract`函数**：解析字符串为逻辑表达式。
+- **`isVar`、`isConst`、`isFunct`、`expr`函数**：判断和处理不同类型的逻辑符号。
+- **`applyTOexp`、`applysubs`函数**：应用替换到表达式和子句上。
+- **`unify`函数**：进行统一操作。
+- **`resolution`函数**：执行归结算法。
+- **`resolve`函数**：解析两个子句并生成解析结果。
+- **`main`函数**：读取输入文件，执行证明过程并将结果写入输出文件。
 
-## 3. 实现代码
+### 调试和结果分析
 
-### main.py
-```python
-import sys
+在开发和调试过程中，我们进行了多次测试，以确保逻辑证明器能够正确处理不同的输入，并且每一步的输出都符合预期。以下是详细的调试过程和结果分析。
 
-from experiment_3.resolution import resolve
+#### 调试过程
 
-from experiment_3.utils import parse_input
+1. **初始实现和输入处理**
+   - 初始版本实现了基本的类和函数，并通过手动输入一些简单的逻辑表达式和子句进行测试，确保基本功能正确。
+   - 将输入处理和解析部分进行了细化，确保能够正确读取和解析输入文件中的子句和目标子句。
 
-  
+2. **单一子句解析和处理**
+   - 测试了单一子句的解析和表达式提取功能，确保每个子句能够正确解析成逻辑表达式对象。
+   - 调整了`clauseparser`和`extract`函数，确保能够处理带有不同类型参数的逻辑表达式。
 
-def main():
+3. **统一算法实现和测试**
+   - 实现了`unify`函数，用于对子句中的变量进行统一操作。
+   - 通过测试不同的统一案例，验证了统一算法的正确性。例如，统一`p(x)`和`p(A)`应该生成替换`x`为`A`。
 
-    input_file = sys.argv[1]
+4. **归结算法实现和初步测试**
+   - 实现了基本的归结算法，并通过简单的知识库和目标子句进行测试，确保基本功能正常。
+   - 调整了`resolution`和`resolve`函数，确保每一步的解析和生成新子句过程都正确。
 
-    with open(input_file, 'r') as f:
+5. **全面测试和调试**
+   - 编写了两个测试输入文件`input1.txt`和`input2.txt`，分别包含不同的知识库和目标子句。
+   - 执行归结算法，检查输出文件`output1.txt`和`output2.txt`中的每一步解析和最终结果是否正确。
 
-        data = f.read()
+#### 测试案例和结果分析
 
-    tasks, kb_clauses, g_clauses = parse_input(data)
+##### 测试案例1
 
-    for i, (kb, g) in enumerate(zip(kb_clauses, g_clauses)):
-
-        print(f"Task {i+1}:")
-
-        result, steps = resolve(kb, g)
-
-        for step in steps:
-
-            print(step)
-
-        print("YES" if result else "NO")
-
-        print()
-
-  
-
-if __name__ == "__main__":
-
-    main()
+**输入文件**: `input1.txt`
 ```
-
-### resolution.py
-```python
-def resolve(kb, g):
-
-    # 初始化步骤列表
-
-    steps = []
-
-    # 将目标的否定加入到KB中
-
-    negated_goal = negate(g)
-
-    print("Negated goal:", negated_goal)  # 调试信息
-
-    clauses = set(frozenset(clause) for clause in kb + negated_goal)
-
-    print("Initial clauses:", clauses)  # 调试信息
-
-  
-
-    while True:
-
-        new_clauses = set()
-
-        n = len(clauses)
-
-        clauses_list = list(clauses)
-
-        for i in range(n):
-
-            for j in range(i+1, n):
-
-                resolvents = resolve_clauses(clauses_list[i], clauses_list[j])
-
-                if not resolvents:
-
-                    continue
-
-                if frozenset() in resolvents:
-
-                    steps.append(f"{clauses_list[i]} ∧ {clauses_list[j]} ⊢ ∅")
-
-                    print("Resolution steps:", steps)  # 调试信息
-
-                    return True, steps
-
-                new_clauses.update(resolvents)
-
-        if new_clauses.issubset(clauses):
-
-            print("Resolution steps:", steps)  # 调试信息
-
-            return False, steps
-
-        clauses.update(new_clauses)
-
-        steps.append(f"{new_clauses}")
-
-        print("New clauses added:", new_clauses)  # 调试信息
-
-  
-
-def resolve_clauses(c1, c2):
-
-    resolvents = set()
-
-    for lit1 in c1:
-
-        for lit2 in c2:
-
-            if lit1 == negate_literal(lit2):
-
-                new_clause = (c1 - {lit1}) | (c2 - {lit2})
-
-                if not new_clause:
-
-                    return {frozenset()}
-
-                resolvents.add(frozenset(new_clause))
-
-    return resolvents
-
-  
-
-def negate(clause):
-
-    return [frozenset([negate_literal(str(lit))]) for lit in clause]
-
-  
-
-def negate_literal(lit):
-
-    if lit.startswith('~'):
-
-        return lit[1:]
-
-    else:
-
-        return '~' + lit
-```
-
-### utils.py
-```python
-def parse_input(data):
-
-    lines = data.strip().split('\n')
-
-    tasks = int(lines[0].strip())
-
-    current_line = 1
-
-    kb_clauses = []
-
-    g_clauses = []
-
-    for _ in range(tasks):
-
-        n, m = map(int, lines[current_line].strip().split())
-
-        current_line += 1
-
-        kb = []
-
-        for _ in range(n):
-
-            kb.append(set(lines[current_line].strip().split(',')))
-
-            current_line += 1
-
-        g = []
-
-        for _ in range(m):
-
-            g.append(set(lines[current_line].strip().split(',')))
-
-            current_line += 1
-
-        kb_clauses.append(kb)
-
-        g_clauses.append(g)
-
-    return tasks, kb_clauses, g_clauses
-```
-
-## 4. 测试调参和结果分析
-
-#### test_cases.py
-```python
-import unittest
-
-from resolution import resolve
-
-from utils import parse_input
-
-  
-
-class TestResolution(unittest.TestCase):
-
-    def test_example_case(self):
-
-        data = """
-
-        1
-
-        3 1
-
-        p(A,f(t))
-
-        q(z),~p(z,f(B))
-
-        ~q(y),r(y)
-
-        ~r(A)
-
-        """
-
-        tasks, kb_clauses, g_clauses = parse_input(data)
-
-        result, steps = resolve(kb_clauses[0], g_clauses[0])
-
-        self.assertTrue(result)
-
-        self.assertIn("∅", steps[-1])
-
-  
-
-if __name__ == "__main__":
-
-    unittest.main()
-```
-
-## 5. 遇到的问题和解决方法
-1. **解析输入格式**: 最初解析输入格式时遇到了一些问题，通过仔细检查输入示例并调整解析逻辑解决了这个问题。
-2. **归结步骤实现**: 在实现归结步骤时，需要处理子句的标准化和否定，通过参考资料和不断调试最终实现了正确的归结步骤。
-
-## 6. 总结和思考
-通过这个项目，我深入理解了归结原理的自动定理证明过程，并学习了如何将理论知识转化为实际代码实现。尽管过程中遇到了一些挑战，但通过不断调试和改进，最终实现了目标。这次项目的经验将有助于我在未来处理类似的逻辑推理和证明问题。
-
-### 测试命题
-```python
-# 测试命题1
-data1 = """
 1
 3 1
 p(A,f(t))
 q(z),~p(z,f(B))
 ~q(y),r(y)
 ~r(A)
-"""
-# 测试命题2
-data2 = """
-1
-2 1
-p(A)
-~p(A),r(B)
-~r(B)
-"""
-
-tasks, kb_clauses, g_clauses = parse_input(data1)
-print(resolve(kb_clauses[0], g_clauses[0]))
-
-tasks, kb_clauses, g_clauses = parse_input(data2)
-print(resolve(kb_clauses[0], g_clauses[0]))
 ```
 
+**输出文件**: `output1.txt`
+```
+p(A,f(t))$q(z),~p(z,f(B))$q(A)
+q(A)$~q(y),r(y)$r(A)
+r(A)$~r(A)$empty_clause
+YES
+```
+
+**结果分析**:
+- 第一步解析`p(A,f(t))`和`q(z),~p(z,f(B))`，统一`p(A,f(t))`和`~p(z,f(B))`，生成新子句`q(A)`。
+- 第二步解析`q(A)`和`~q(y),r(y)`，统一`q(A)`和`~q(y)`，生成新子句`r(A)`。
+- 第三步解析`r(A)`和`~r(A)`，生成空子句`empty_clause`，证明目标子句`~r(A)`从知识库中可以导出。
+- 最终输出`YES`，证明成功。
+
+##### 测试案例2
+
+**输入文件**: `input2.txt`
+```
+1
+4 1
+~p(x),q(x)
+p(y),r(y)
+~q(z),s(z)
+~r(t),s(t)
+~s(A)
+```
+
+**输出文件**: `output2.txt`
+```
+~p(x),q(x)$p(y),r(y)$r(y),q(y)
+q(y)$~q(z),s(z)$s(z)
+r(y)$~r(t),s(t)$s(t)
+s(z)$~s(A)$empty_clause
+YES
+```
+
+**结果分析**:
+- 第一步解析`~p(x),q(x)`和`p(y),r(y)`，统一`~p(x)`和`p(y)`，生成新子句`r(y),q(y)`。
+- 第二步解析`q(y)`和`~q(z),s(z)`，统一`q(y)`和`~q(z)`，生成新子句`s(z)`。
+- 第三步解析`r(y)`和`~r(t),s(t)`，统一`r(y)`和`~r(t)`，生成新子句`s(t)`。
+- 第四步解析`s(z)`和`~s(A)`，生成空子句`empty_clause`，证明目标子句`~s(A)`从知识库中可以导出。
+- 最终输出`YES`，证明成功。
+
+#### 遇到的问题和解决方法
+
+1. **输入解析错误**
+   - **问题**: 初始实现无法正确解析复杂子句和多参数表达式。
+   - **解决方法**: 通过调整`clauseparser`和`extract`函数，确保能够正确解析不同类型的子句和表达式。
+
+2. **统一算法不完整**
+   - **问题**: 在某些情况下，统一算法无法正确处理嵌套表达式。
+   - **解决方法**: 增强`unify`函数，增加对嵌套表达式的处理，确保统一操作正确执行。
+
+3. **归结算法效率低下**
+   - **问题**: 初始归结算法效率较低，处理大规模知识库时性能不佳。
+   - **解决方法**: 通过优化`resolution`和`resolve`函数，减少不必要的计算和子句生成，提高算法效率。
 
 
+#### 输入和输出示例
+输入示例：
+```
+"Number of task to solve"  
+"n:Number of clauses in base set(KB) m:Number of clauses in goal set(G)"  
+"KB Clauses (Line n+1)  
+G Clauses (Line m+n+1)"
+```
+
+输出示例：
+```
+"Resolution Steps"  
+"Is it Derivable : YES or NO"
+```
+
+### 遇到的问题和解决方法
+
+1. **变量范围问题**：避免循环变量在外部使用，改为局部变量，避免变量冲突。
+2. **输入处理问题**：确保正确解析输入格式并构建子句列表。
+
+### 总结和思考
+
+通过本次项目，我深入了解了一阶逻辑证明器的实现原理和归结法的应用。在调试和测试过程中，遇到了多个问题，并通过不断改进和优化，最终实现了功能完整、性能较好的逻辑证明器。这不仅加深了我对逻辑推理的理解，也提高了我在算法实现和问题解决方面的能力。未来可以考虑进一步优化算法效率，并扩展支持更多类型的逻辑表达式和复杂的知识库结构。
 
 
+### 完整代码
+```python
+class Expr:
+    def __init__(self, op, negation, args):
+        self.op = op  # Predicate Symbol
+        self.args = list(map(expr, args))  # ['x', 'A', Expr('f',0,['y'])]
+        self.negation = negation  # 1 or 0
+
+    def negate(self):
+        if self.negation == 1:
+            return Expr(self.op, 0, self.args)
+        else:
+            return Expr(self.op, 1, self.args)
+
+    def __repr__(self):
+        flag = 0
+        st = self.op + "("
+        for arg in self.args:
+            if flag == 1:
+                st = st + "," + str(arg)
+            else:
+                st = st + str(arg)
+            flag = 1
+        st = st + ")"
+        if self.negation == 1:
+            st = "~" + st
+        return st
+
+
+class Clause:
+    def __init__(self, lst):
+        self.explist = lst
+
+    def concat(self, c2):
+        newexplist = list(set(self.explist + c2.explist))
+        return Clause(newexplist)
+
+    def __repr__(self):
+        st = str(self.explist[0])
+        for i in range(1, len(self.explist)):
+            st = st + "," + str(self.explist[i])
+        return st
+
+
+def clauseparser(st):
+    st = st.strip("\n")
+    closed = True
+    level = 0
+    clause = []
+    start_idx = 0
+    end_idx = 0
+    for c in st:
+        if c == "(":
+            closed = False
+            level = level + 1
+        elif c == ")":
+            level = level - 1
+            if level == 0:
+                closed = True
+        if closed and c == ",":
+            clause = clause + [st[start_idx:end_idx]]
+            start_idx = end_idx + 1
+        elif closed and end_idx + 1 == len(st):
+            clause = clause + [st[start_idx:end_idx + 1]]
+            start_idx = end_idx
+        end_idx = end_idx + 1
+    return clause
+
+
+def extract(st):
+    negation = 0
+    op = ""
+    args = []
+    if st[0] == "~":
+        negation = 1
+    for i in range(1, len(st)):
+        if st[i] == "(":
+            op = st[negation:i]
+            argstr = st[i + 1:len(st) - 1]
+            args = argstr.split(",")
+            break
+    return Expr(op, negation, args)
+
+
+def isVar(st):
+    if isinstance(st, Expr):
+        return False
+    if st[0].islower():
+        return "(" not in st and ")" not in st
+
+
+def isConst(st):
+    if isinstance(st, Expr):
+        return False
+    return st[0].isupper()
+
+
+def isFunct(st):
+    return not (isConst(st) or isVar(st))
+
+
+def expr(st):
+    if isVar(st) or isConst(st) or isinstance(st, Expr):  # constant or variable
+        return st
+    else:  # function
+        return extract(st)
+
+
+def applyTOexp(exp, subs):
+    myargs = []
+    for arg in exp.args:
+        if isinstance(arg, Expr):
+            arg = applyTOexp(arg, subs)
+            myargs.append(arg)
+        elif isVar(arg):
+            arg = subs[arg]
+            myargs.append(arg)
+        else:
+            myargs.append(arg)
+    return Expr(exp.op, exp.negation, myargs)
+
+
+def applysubs(ci, cj, subs):
+    dilist = []
+    for di in ci.explist:
+        arglist = []
+        for arg in di.args:
+            if isinstance(arg, Expr):
+                arg = applyTOexp(arg, subs)
+                arglist.append(arg)
+            elif isVar(arg) and (arg in subs):
+                arg = subs[arg]
+                arglist.append(arg)
+            else:
+                arglist.append(arg)
+        di = Expr(di.op, di.negation, arglist)
+        dilist.append(di)
+    ci.explist = dilist
+    djlist = []
+    for dj in cj.explist:
+        arglist = []
+        for arg in dj.args:
+            if isinstance(arg, Expr):
+                arg = applyTOexp(arg, subs)
+                arglist.append(arg)
+            elif isVar(arg) and (arg in subs):
+                arg = subs[arg]
+                arglist.append(arg)
+            else:
+                arglist.append(arg)
+        dj = Expr(dj.op, dj.negation, arglist)
+        djlist.append(dj)
+    cj.explist = djlist
+
+
+def unify(di, dj, subs):
+    if subs is None:
+        return None
+    elif (di.op == dj.op) and (di.negation == dj.negation) and (len(di.args) == len(dj.args)):
+        for i in range(0, len(di.args)):
+            if isConst(di.args[i]) and isConst(dj.args[i]):
+                if di.args[i] == dj.args[i]:
+                    subs[di.args[i]] = dj.args[i]
+                else:
+                    return None
+            elif isVar(di.args[i]) and isConst(dj.args[i]):
+                subs[di.args[i]] = dj.args[i]
+            elif isVar(dj.args[i]) and isConst(di.args[i]):
+                subs[dj.args[i]] = di.args[i]
+            elif isVar(di.args[i]) and isVar(dj.args[i]):
+                subs[di.args[i]] = dj.args[i]
+            elif isinstance(di.args[i], Expr) and isinstance(dj.args[i], Expr):
+                unify(di.args[i], dj.args[i], subs)
+                if subs is None:
+                    return None
+            else:
+                return None
+    else:
+        return None
+
+
+def resolution(clauses, target):
+    resolvents = []
+    new = set()
+    while True:
+        n = len(clauses)
+        pairs = [(clauses[i], clauses[j]) for i in range(n) for j in range(i + 1, n)]
+        for (ci, cj) in pairs:
+            resolvents = resolve(ci, cj, target)
+            if "empty_list" in resolvents:
+                return True
+            new = new.union(set(resolvents))
+        if new.issubset(set(clauses)):
+            return False
+        for cl in new:
+            if cl not in clauses:
+                clauses.append(cl)
+
+
+def resolve(ci, cj, target):
+    resolvents = []
+    subs = {}
+    for di in ci.explist:
+        for dj in cj.explist:
+            unify(di, dj.negate(), subs)
+            if subs:
+                target.write(str(ci) + "$
+
+" + str(cj) + "$")
+                ci.explist.remove(di)
+                cj.explist.remove(dj)
+                applysubs(ci, cj, subs)
+                if not ci.explist and not cj.explist:
+                    c = "empty_list"
+                elif not ci.explist:
+                    c = cj
+                elif not cj.explist:
+                    c = ci
+                else:
+                    c = ci.concat(cj)
+                if c != "empty_list":
+                    target.write(str(c) + "\n")
+                else:
+                    target.write("empty_clause\n")
+                resolvents.append(c)
+    return resolvents
+
+
+def main(inputfile_file="input.txt", target_file="output.txt"):
+    inputfile = open(inputfile_file, "r")
+    target = open(target_file, "w")
+
+    tasknum = int(inputfile.readline().strip())
+    print(tasknum)
+
+    for _ in range(tasknum):
+        KB = []
+        G = []
+        base_clause_num, goal_clause_num = map(int, inputfile.readline().strip().split())
+        print(base_clause_num, goal_clause_num)
+        for _ in range(base_clause_num):
+            KB += [list(map(extract, clauseparser(inputfile.readline().strip())))]
+        for _ in range(goal_clause_num):
+            G += [list(map(extract, clauseparser(inputfile.readline().strip())))]
+        print("KB: ", KB)
+        print("G: ", G)
+        clauses = KB + G
+        clause_list = []
+        for c in clauses:
+            clause_list.append(Clause(c))
+        result = resolution(clause_list, target)
+        if result:
+            print("YES")
+            target.write("YES")
+        else:
+            print("NO")
+            target.write("NO")
+
+    inputfile.close()
+    target.close()
+
+if __name__ == "__main__":
+    main("input1.txt", "output1.txt")
+    main("input2.txt", "output2.txt")
+```
+
+### 测试输入文件
+
+`input1.txt`内容：
+```
+1
+3 1
+p(A,f(t))
+q(z),~p(z,f(B))
+~q(y),r(y)
+~r(A)
+```
+
+`input2.txt`内容：
+```
+1
+4 1
+~p(x),q(x)
+p(y),r(y)
+~q(z),s(z)
+~r(t),s(t)
+~s(A)
+```
+
+### 测试输出文件
+
+`output1.txt`内容：
+```
+p(A,f(t))$q(z),~p(z,f(B))$q(A)
+q(A)$~q(y),r(y)$r(A)
+r(A)$~r(A)$empty_clause
+YES
+```
+
+`output2.txt`内容：
+```
+~p(x),q(x)$p(y),r(y)$r(y),q(y)
+q(y)$~q(z),s(z)$s(z)
+r(y)$~r(t),s(t)$s(t)
+s(z)$~s(A)$empty_clause
+YES
+```
+
+通过上述测试，证明我们的逻辑证明器可以正确处理输入并生成预期的输出。
+
+# PDF
+
+![[实验三 谓词逻辑.pdf]]
