--- a/专业课/计算机系统基础/笔记/0. 计算机系统基础目录.md
+++ b/专业课/计算机系统基础/笔记/0. 计算机系统基础目录.md
@@ -7,11 +7,9 @@ book: "[[计算机系统基础（袁春风） (OCR).pdf]]"
 
 ## 1. 课堂
 
-前四章尽量讲完
-408, 数字逻辑
-linux
+前四章, linux+C+gcc
 
-计算机系统基础必考内容：
+计算机系统基础必考内容: 
 - 用户CPU时间的计算
 - Amdahl 定律
 - 模运算系统与补码
@@ -23,12 +21,20 @@ linux
 - 数组元素的分配和储存
 - 程序转换处理过程
 
-分数组成
+分数组成: 
 - 平时成绩系数(20%): $20\times\frac{1}{3}=6.67$
 - 实验成绩系数(30%): $30\times\frac{4}{5}=24$ ?
 - 实践成绩系数(0%): $0$
 - 期中成绩系数(0%): $0$
 - 期末成绩系数(50%): $50\times\frac{3}{5}=30$
+
+期末考试: 
++ $20\times2$ 选择
++ $5-6$ 大题:
+    + 一段汇编一段c语言做对应, 都是贝尔实验室格式汇编
+    + 出题比较偏
+    + 有组成原理内容
+    + 章节占比分布: 0.2, 0.2, 0.4, 0.2
 
 ## 2. 目录
 
