--- a/专业课/计算机系统基础/笔记/1. 计算机系统概述.md
+++ b/专业课/计算机系统基础/笔记/1. 计算机系统概述.md
@@ -38,7 +38,8 @@
         - **输入设备**、**输出设备**：由用户操纵（执行与主机之间的通信）
     2. 内部表示：指令和数据均以**二进制表示**。指令序列 = 程序
         - **指令**由**操作码**（操作类型） + **地址码**（操作数的地址）组成
-    3. 工作原理：程序的执行采用“**存储程序**”方式
+    3. 工作原理：程序的执行采用“**存储程序**”方式:
+        + 任何要计算机完成的工作都要先被编写成程序, 然后将程序和原始数据送入主存并启动执行. 一旦程序被启动, 计算机应能在不需操作人员干预下, 自动完成逐条取出指令和执行指令的任务. 
 
 + 计算机硬件主要包括中央处理器, 存储器, 外部设备和各类总线等: 
     + 中央处理器(CPU): 
